--- a/flex-ui-examples/src/main/java/org/cdlflex/ui/pages/examples/FormComponentsPage.html
+++ b/flex-ui-examples/src/main/java/org/cdlflex/ui/pages/examples/FormComponentsPage.html
@@ -17,9 +17,20 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:wicket="http://wicket.apache.org">
 <body>
 <wicket:extend>
+  <h1 class="page-header">Form components</h1>
+
   <form wicket:id="form" class="form-horizontal" role="form">
     <div class="form-group">
+      <label for="date-time-picker" class="col-sm-2 control-label">DateTimePicker</label>
+
+      <div class="col-sm-10">
+        <input class="form-control" type="text" wicket:id="date-time-picker" id="date-time-picker"/>
+      </div>
+    </div>
+
+    <div class="form-group">
       <label for="button-multiple-choice" class="col-sm-2 control-label">ButtonMultipleChoice</label>
+
       <div class="col-sm-10">
         <span wicket:id="button-multiple-choice" id="button-multiple-choice"></span>
       </div>
