--- a/flex-ui-examples/src/main/java/org/cdlflex/ui/pages/examples/TablePage.html
+++ b/flex-ui-examples/src/main/java/org/cdlflex/ui/pages/examples/TablePage.html
@@ -15,21 +15,58 @@
 
 -->
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:wicket="http://wicket.apache.org">
+<head>
+  <wicket:head>
+    <style type="text/css">
+      tr.selected td {
+        background-color: #428BCA !important;
+        color: #ffffff !important;;
+      }
+    </style>
+  </wicket:head>
+</head>
 <body>
 <wicket:extend>
   <h1 class="page-header">Data tables</h1>
 
   <div class="row">
     <div class="col-md-12">
+      <h2>Default data table</h2>
+      <p>
+        This table also uses a <code>PropertyConvertingColumn</code> to calculate the age based on the birthday. It
+        allows sorting over the birthday attribute.
+      </p>
       <table class="table table-striped table-hover" wicket:id="default-data-table"></table>
     </div>
   </div>
 
-  <hr/>
+  <div class="row">
+    <div class="col-md-12">
+      <h2>Actions column</h2>
+      <p>
+        This data table demontstrates the <code>ActionColmun</code>, and how it can be used to provide row-specific
+        (ajax) actions.
+      </p>
+      <table class="table table-striped table-hover" wicket:id="default-data-table-actions"></table>
+    </div>
+  </div>
 
   <div class="row">
     <div class="col-md-12">
-      <table class="table table-striped table-hover" wicket:id="default-data-table-actions"></table>
+      <h2>Selection aware behavior</h2>
+      <p>
+        <code>SelectionAwareBehavior</code> and subclasses allow the selection of rows and attach actions to select
+        events. These examples makes ajax calls on select and log the selected item(s) (check your browser console!).
+      </p>
+
+      <h3>Single select</h3>
+      <table class="table table-striped table-hover" wicket:id="selection-aware-data-table"></table>
+
+      <h3>Single select (with deselect)</h3>
+      <table class="table table-striped table-hover" wicket:id="toggle-aware-data-table"></table>
+
+      <h3>Multi select</h3>
+      <table class="table table-striped table-hover" wicket:id="multi-selection-aware-data-table"></table>
     </div>
   </div>
 </wicket:extend>
