Add more dialogs examples

--- a/flex-ui-examples/src/main/java/org/cdlflex/ui/pages/examples/DialogsPage$PersonDetailDialog.html
+++ b/flex-ui-examples/src/main/java/org/cdlflex/ui/pages/examples/DialogsPage$PersonDetailDialog.html
@@ -17,7 +17,11 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:wicket="http://wicket.apache.org">
 <body>
 <wicket:extend>
-  <p>This is a sample dialog body</p>
+  <ul>
+    <li wicket:id="id"></li>
+    <li>Name: <span wicket:id="name"></span></li>
+    <li>Birthday: <span wicket:id="birthday"></span></li>
+  </ul>
 </wicket:extend>
 </body>
 </html>
