Add buttons to open source files of examples

--- a/flex-ui-examples/src/main/java/org/cdlflex/ui/pages/ExamplePage.html
+++ b/flex-ui-examples/src/main/java/org/cdlflex/ui/pages/ExamplePage.html
@@ -27,6 +27,10 @@
       </div>
 
       <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
+        <span class="btn-group pull-right">
+          <a wicket:id="link-java-sources" class="btn btn-link">Source</a>
+          <a wicket:id="link-html-sources" class="btn btn-link">HTML</a>
+        </span>
         <wicket:child/>
       </div>
     </div>
