--- a/flex-ui-examples/src/main/java/org/cdlflex/ui/pages/examples/FeedbackPanelPage.html
+++ b/flex-ui-examples/src/main/java/org/cdlflex/ui/pages/examples/FeedbackPanelPage.html
@@ -29,11 +29,11 @@
             display the messages, which in this case is attached to the page, but can be any parent component.
           </p>
 
-          <button class="btn btn-info" wicket:id="infoTrigger">Trigger info</button>
-          <button class="btn btn-success" wicket:id="successTrigger">Trigger success</button>
-          <button class="btn btn-warning" wicket:id="warnTrigger">Trigger warning</button>
-          <button class="btn btn-danger" wicket:id="errorTrigger">Trigger error</button>
-          <button class="btn btn-default" wicket:id="allTrigger">Trigger everything</button>
+          <button class="btn btn-info" wicket:id="infoTrigger" id="infoTrigger">Trigger info</button>
+          <button class="btn btn-success" wicket:id="successTrigger" id="successTrigger">Trigger success</button>
+          <button class="btn btn-warning" wicket:id="warnTrigger" id="warnTrigger">Trigger warning</button>
+          <button class="btn btn-danger" wicket:id="errorTrigger" id="errorTrigger">Trigger error</button>
+          <button class="btn btn-default" wicket:id="allTrigger" id="allTrigger">Trigger everything</button>
         </div>
       </div>
     </div>
