--- a/flex-ui-examples/src/main/java/org/cdlflex/ui/pages/examples/TablePage.html
+++ b/flex-ui-examples/src/main/java/org/cdlflex/ui/pages/examples/TablePage.html
@@ -20,7 +20,7 @@
     <style type="text/css">
       tr.selected td {
         background-color: #428BCA !important;
-        color: #ffffff !important;;
+        color: #ffffff !important;
       }
     </style>
   </wicket:head>
