--- a/flex-ui-core/src/main/java/org/cdlflex/ui/markup/html/nav/Navbar.html
+++ b/flex-ui-core/src/main/java/org/cdlflex/ui/markup/html/nav/Navbar.html
@@ -30,7 +30,8 @@
   <div class="container-fluid" wicket:id="navbar-container">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header" wicket:id="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+              data-target="#bs-example-navbar-collapse-1">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
