--- a/flex-ui-core/src/main/java/org/cdlflex/ui/markup/html/nav/Navbar.html
+++ b/flex-ui-core/src/main/java/org/cdlflex/ui/markup/html/nav/Navbar.html
@@ -31,7 +31,7 @@
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header" wicket:id="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
-              data-target="#bs-example-navbar-collapse-1">
+              data-target="#flui-navbar-collapse">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
@@ -41,7 +41,7 @@
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse">
+    <div class="collapse navbar-collapse" id="flui-navbar-collapse">
       <ul class="nav navbar-nav">
         <li wicket:id="nav-left">
           <wicket:container wicket:id="nav-component-container"></wicket:container>
