[#53] Add a custom table paging navigation which shows only the recent five page links and is styled according to bootstrap

--- a/flex-ui-core/src/main/java/org/cdlflex/ui/markup/html/repeater/data/table/flex/FlexTable.html
+++ b/flex-ui-core/src/main/java/org/cdlflex/ui/markup/html/repeater/data/table/flex/FlexTable.html
@@ -22,7 +22,7 @@
       <wicket:container wicket:id="toolbars"/>
     </div>
 
-    <div class="table-container scrollable">
+    <div class="table-container table-responsive scrollable">
       <table class="table table-cdlflex table-striped table-hover">
         <caption wicket:id="caption"></caption>
 
