--- a/flex-ui-core/src/main/java/org/cdlflex/ui/markup/html/repeater/data/table/flex/PagingNavigator.html
+++ b/flex-ui-core/src/main/java/org/cdlflex/ui/markup/html/repeater/data/table/flex/PagingNavigator.html
@@ -15,9 +15,16 @@
 
 -->
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:wicket="http://wicket.apache.org">
+<wicket:head>
+  <style>
+    .pagination i {
+      font-size: 18px;
+    }
+  </style>
+</wicket:head>
 <body>
 <wicket:panel>
-  <ul>
+  <ul class="pagination">
     <li><a wicket:id="first"><i class="fa fa-angle-double-left"></i></a></li>
     <li><a wicket:id="prev"><i class="fa fa-angle-left"></i></a></li>
     <li wicket:id="navigation">
