[#53] Add flextable pagination example to flex-ui example project

--- a/flex-ui-examples/src/main/java/org/cdlflex/ui/pages/examples/FlexTablePage.html
+++ b/flex-ui-examples/src/main/java/org/cdlflex/ui/pages/examples/FlexTablePage.html
@@ -24,6 +24,16 @@
       <table wicket:id="flex-table"></table>
     </div>
   </div>
+  <div class="row">
+    <div class="col-md-12">
+      <h2>Pagination bar</h2>
+      <p>
+        This data table demontstrates the <code>Pagination bar</code>, and how it can be used to provide a boostrap like
+        styled page navigation.
+      </p>
+      <table wicket:id="flex-table-pagination"></table>
+    </div>
+  </div>
 </wicket:extend>
 </body>
 </html>
